--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "\n",
     "def cargar_en_redshift(conn, table_name, data):\n",
     "    \n",
@@ -72,7 +71,7 @@
     "    try:\n",
     "        \n",
     "        # Definir la tabla en la que deseas insertar los datos\n",
-    "        table_name = 'personajes_rick_morty'\n",
+    "        table_name = 'prueba'\n",
     "\n",
     "        # Insertar los datos en la tabla\n",
     "        for character in data:\n",
