--- a/Entregable_1/extraccion_datos_api_publica.ipynb
+++ b/Entregable_1/extraccion_datos_api_publica.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -564,11 +564,15 @@
     "    data = []\n",
     "\n",
     "# Establecer la conexión a la base de datos\n",
+    "\n",
+    "direccion= '../password.txt'\n",
+    "with open(direccion, 'r') as archivo:\n",
+    "    password = archivo.read()\n",
     "connection_params = {\n",
     "    \"host\": \"data-engineer-cluster.cyhh5bfevlmn.us-east-1.redshift.amazonaws.com\",\n",
     "    \"database\": \"data-engineer-database\",\n",
     "    \"user\": \"lautarosaucedo631_coderhouse\",\n",
-    "    \"password\": \"BoH33Z9wQj\",\n",
+    "    \"password\": password,\n",
     "    \"port\": \"5439\"\n",
     "}\n",
     "\n",
@@ -593,6 +597,26 @@
     "    if conn:\n",
     "        cur.close()\n",
     "        conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BoH33Z9wQj\n"
+     ]
+    }
+   ],
+   "source": [
+    "direccion= '../password.txt'\n",
+    "print(password)\n",
+    "with open(direccion, 'r') as archivo:\n",
+    "    password = archivo.read()"
    ]
   }
  ],
