--- a/Entregable_1/extraccion_datos_api_publica.ipynb
+++ b/Entregable_1/extraccion_datos_api_publica.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -564,8 +564,7 @@
     "    data = []\n",
     "\n",
     "# Establecer la conexión a la base de datos\n",
-    "\n",
-    "direccion= '../password.txt'\n",
+    "direccion= 'c:/Users/Lautaro/Desktop/MySQL curso/password.txt'\n",
     "with open(direccion, 'r') as archivo:\n",
     "    password = archivo.read()\n",
     "connection_params = {\n",
@@ -597,26 +596,6 @@
     "    if conn:\n",
     "        cur.close()\n",
     "        conn.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BoH33Z9wQj\n"
-     ]
-    }
-   ],
-   "source": [
-    "direccion= '../password.txt'\n",
-    "print(password)\n",
-    "with open(direccion, 'r') as archivo:\n",
-    "    password = archivo.read()"
    ]
   }
  ],
