--- a/Ejercicios_prueba/Pandas/lectura_github.ipynb
+++ b/Ejercicios_prueba/Pandas/lectura_github.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,21 @@
     "df = pd.read_csv(url, index_col=0)\n",
     "print(df.columns)\n",
     "# Subset de columnas de interés\n",
-    "print(df[['AMZN','MCD','SBUX','GOOG','MSFT']].head(5).round(1))"
+    "print(df[['AMZN','MCD','SBUX','GOOG','MSFT']].head(5).round(1))\n",
+    "\n",
+    "#\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "# Importar la data\n",
+    "df = pd.read_csv(\"https://query.data.world/s/shcktxndtu3ojonm46tb5udlz7sp3e\")\n",
+    "df"
    ]
   }
  ],
